--- a/web_app/app/assets/stylesheets/mainbody.css
+++ b/web_app/app/assets/stylesheets/mainbody.css
@@ -3,7 +3,7 @@
     height: auto;
     margin-left: auto;
     margin-right: auto;
-    margin-top; 11px;
+    margin-top: 11px;
     margin-bottom: 21px;
 }
 
